assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

ul {
    margin: 0;
}

body {
    background-color: aliceblue;
}

h1 {
    width: 100vw;
    padding: 20px 0;
    background-color: rgba(0,0,139,0.75);
    border-bottom: rgba(0,0,139,1) 10px solid;
    color: white;
    font-weight: bolder;
    text-align: center;
}

.parent {
    margin-top: 20px;
    border: rgba(0,0,139,1) solid 2px;
}

/* Styles the search form */
h3 {
    font-weight: lighter;
    margin: 10px;
}

form {
    width: 100%;
}

label {
    /* color:white; */
    display:inline;
    font-size: 5vw;
    font-weight: lighter;
}

#cityName {
    max-width:200px;
    display: inline;
    margin: 0;
}

.searchBtn {
    width: 90%;
    height: 40px;
    margin: 5px auto;
    background-color: rgba(0,0,200,.5);
    border-radius: 10px;
    border: darkblue solid 3px;
    filter: drop-shadow(5px 5px 5px rgba(0,0,139,0.25));
    color:white;
}

.searchBtn:hover {
    background-color: rgba(0,0,139,1);
    cursor: pointer;
}
/* End of styling the search form */

.historyBtn {
    width: 80%;
    height: 40px;
    margin: 5px auto;
    background-color: rgba(0,0,139,.75);
    border: rgba(0,0,139,1) solid 3px;
    border-radius: 10px;
    color:white;
    filter: drop-shadow(5px 5px 5px rgba(0,0,139,0.25));
}

.historyBtn:hover {
    background-color: rgba(0,0,139,1);
    cursor: pointer;
}

.uvi-low {
    background-color: green;
    border-radius: 5px;
    width: fit-content;
    padding: 5px;
    margin: auto;
}

.uvi-moderate {
    background-color: yellow;
    border-radius: 5px;
    width: fit-content;
    padding: 5px;
    margin: auto;
}

.uvi-high {
    background-color: orange;
    border-radius: 5px;
    width: fit-content;
    padding: 5px;
    margin: auto;
}

.uvi-veryhigh {
    background-color: red;
    border-radius: 5px;
    width: fit-content;
    padding: 5px;
    margin: auto;
}

.uvi-extreme {
    background-color: purple;
    border-radius: 5px;
    width: fit-content;
    padding: 5px;
    margin: auto;
}

.forecast {
    height:fit-content;
}

/* For iPads and Tablets 481px - 768px */
@media screen and (min-width:481px) {
    label {
        font-size: 3vw;
    }
}

/* For Small Screens and Laptops 769px - 1024px */
@media screen and (min-width:769px) {
    label {
        font-size: 2vw;
    }
}
    

/* For Desktops and Large Screens 1025px - 1200px */
@media screen and (min-width:1025px) {
    label {
        font-size: 1.5vw;
    }
}

